syntax = "proto3";
import "google/api/annotations.proto";

option csharp_namespace = "Catalog.Application";

package brand;

service BrandService {
	rpc ListBrand(ListBrandRequestDto) returns (ListBrandResponseDto) {
		option (google.api.http) = {
            get: "/v1/brand"
        };
	};


	rpc GetBrand(GetBrandRequestDto) returns (BrandDto) {
		option (google.api.http) = {
            get: "/v1/brand/{id}"
        };
	};

	rpc AddBrand(CreateBrandRequestDto) returns (BrandDto) {
		option (google.api.http) = {
            post: "/v1/brand"
        };
	};
}

message ListBrandRequestDto {
	int32 page_token = 1;
	int32 page_size = 2;
}

message GetBrandRequestDto {
	string id = 1;
}

message CreateBrandRequestDto {
	string name = 1;
	string image = 2;
	int32 status = 3;
	string realm_Id = 4;
}

message BrandDto {
	string id = 1;
	string name = 2;
	string image = 3;
	int32 status = 4;
	string realm_Id = 5;
}

message ListBrandResponseDto {
	repeated BrandDto brands = 1;
	int32 next_page_token = 2;
	int32 total_size = 3;
}